force-app/main/default/objects/student_records__c/student_records__c.object-meta.xml
<CustomObject>
    <label>pace student record</label>
    <nameField>
        <label>student records  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>pace student record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>