force-app/main/default/objects/student_records__c/fields/Age_of_student_in_years__c.field-meta.xml
<CustomField>
    <fullName>Age_of_student_in_years__c</fullName>
    <formula>TEXT(YEAR(TODAY() ) - YEAR(  date_of_birth__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of student in years</label>
    <type>Text</type>
</CustomField>