force-app/main/default/objects/student_records__c/fields/birth_year_month_day__c.field-meta.xml
<CustomField>
    <fullName>birth_year_month_day__c</fullName>
    <formula>TEXT(FLOOR((TODAY() -   date_of_birth__c   )/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp; 
TEXT(FLOOR(MOD((TODAY() -  date_of_birth__c ),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp; 
TEXT(MOD(MOD((TODAY() -  date_of_birth__c ),365),30)) &amp;&apos; DAYS&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>birth year month day</label>
    <type>Text</type>
</CustomField>