force-app/main/default/objects/student_records__c/fields/commerce__c.field-meta.xml
<CustomField>
    <fullName>commerce__c</fullName>
    <label>commerce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>