force-app/main/default/objects/student_records__c/fields/date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>date_of_birth__c</fullName>
    <label>date of birth</label>
    <type>Date</type>
</CustomField>