force-app/main/default/objects/student_records__c/fields/devision_on_bases_of_marks__c.field-meta.xml
<CustomField>
    <fullName>devision_on_bases_of_marks__c</fullName>
    <formula>IF( and (
     social_science__c &gt; 40,
     science__c  &gt; 40,
     hindi__c  &gt; 40,
     english__c  &gt; 40,
     percent__c  &gt;0.7), &quot;First Class&quot;, 
IF( and (
     social_science__c &gt; 40,
     science__c  &gt; 40,
     hindi__c  &gt; 40,
     english__c  &gt; 40,
     percent__c  &gt;0.5), &quot;second Class&quot;,
IF( and (
     social_science__c &gt; 40,
     science__c  &gt; 40,
     hindi__c  &gt; 40,
     english__c  &gt; 40,
     percent__c  &gt;0.4), &quot;third Class&quot; , &quot;fail&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>devision on bases of marks</label>
    <type>Text</type>
</CustomField>