force-app/main/default/objects/student_records__c/fields/english__c.field-meta.xml
<CustomField>
    <fullName>english__c</fullName>
    <label>english</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>