force-app/main/default/objects/student_records__c/fields/grade_level__c.field-meta.xml
<CustomField>
    <fullName>grade_level__c</fullName>
    <formula>IF(  social_science__c  &gt;35 &amp;&amp;  science__c  &gt;35 &amp;&amp;  hindi__c  &gt;35 &amp;&amp;  english__c  &gt;35 &amp;&amp;  commerce__c  &gt;35, &apos;A&apos;, &apos;F&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>grade level</label>
    <type>Text</type>
</CustomField>