force-app/main/default/objects/student_records__c/fields/grade_nested_method__c.field-meta.xml
<CustomField>
    <fullName>grade_nested_method__c</fullName>
    <formula>IF(  percent__c  &gt;= 0.9, &quot;A&quot;,
IF( percent__c &gt;= 0.7, &quot;B&quot;,
IF( percent__c &gt;= 0.5, &quot;C&quot;,
IF( percent__c &gt;= 0.4, &quot;D&quot;,
&quot;F&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>grade nested method</label>
    <type>Text</type>
</CustomField>