force-app/main/default/objects/student_records__c/fields/hindi__c.field-meta.xml
<CustomField>
    <fullName>hindi__c</fullName>
    <label>hindi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>