force-app/main/default/objects/student_records__c/fields/month_of_birth__c.field-meta.xml
<CustomField>
    <fullName>month_of_birth__c</fullName>
    <formula>CASE(
  MONTH(  date_of_birth__c  ),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>month of birth</label>
    <type>Text</type>
</CustomField>