force-app/main/default/objects/student_records__c/fields/percent__c.field-meta.xml
<CustomField>
    <fullName>percent__c</fullName>
    <formula>( social_science__c  +  science__c  +  hindi__c  +  english__c  +  commerce__c )/500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>