force-app/main/default/objects/student_records__c/fields/social_science__c.field-meta.xml
<CustomField>
    <fullName>social_science__c</fullName>
    <label>social science</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>